--- a/index.qmd
+++ b/index.qmd
@@ -2,10 +2,4 @@
 title: "PROJ_ecod_website.github.io"
 ---
 
-This is a Quarto website.
-
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
-
-```{r}
-1 + 1
-```
+This will be for ecod seminar
